[package]
name = "small_cancellation_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
# regex = "1"                                                                       
# lazy_static = "1"                                                                 

[profile.release]
opt-level = 3
